minor changes for better context

--- a/apps/docs/pages/realtime-api/flood-warning.en.mdx
+++ b/apps/docs/pages/realtime-api/flood-warning.en.mdx
@@ -19,9 +19,9 @@ The Flood Warning API data is updated every **15 minutes**.
 To filter and request data, use the standard filtering operations in the [Request Query](/request-query).
 For information on how the API responds to your requests, refer to the [Response Format](/response-format) section.
 
-### Example
+### Example Query
 
-To fetch data from the API, use the following `curl` command. Open your terminal and enter this command:
+To fetch data from the Flood Warning API, use the following `curl` command. Open your terminal and enter this command:
 
 ```curl
 curl --location 'http://api.data.gov.my/flood-warning?limit=3'
