docs: fix incorrect `date` type

--- a/apps/docs/pages/realtime-api/weather.en.mdx
+++ b/apps/docs/pages/realtime-api/weather.en.mdx
@@ -83,7 +83,7 @@ To filter for forecast data for a specific location category, simply use the `co
 | -------------------- | ------- | --------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `location_id`        | string  | Unique identifier for the location. See [Filtering by location category](#filtering-by-location-category) for more details. | <ul> <li>`"St001"` (State)</li> <li>`"Rc001"` (Recreation)</li> <li>`"Ds001"` (District)</li> <li>`"Tn001"` (Town)</li> <li>`"Dv001"` (Division)</li> </ul> |
 | `location_name`      | string  | Name of the location.                                                                                                       | `"Langkawi"`                                                                                                                                                |
-| `date`               | string  | Date of the weather forecast.                                                                                               | `"1957-08-31"`                                                                                                                                              |
+| `date`               | date    | Date of the weather forecast.                                                                                               | `"1957-08-31"`                                                                                                                                              |
 | `morning_forecast`   | string  | Forecast for the morning period.                                                                                            | `"Hujan di satu dua tempat"`                                                                                                                                |
 | `afternoon_forecast` | string  | Forecast for the afternoon period.                                                                                          | `"Ribut petir di satu dua tempat"`                                                                                                                          |
 | `night_forecast`     | string  | Forecast for the night period.                                                                                              | `"Tiada hujan"`                                                                                                                                             |
