focs: update launch date

--- a/apps/docs/pages/realtime-api/weather.en.mdx
+++ b/apps/docs/pages/realtime-api/weather.en.mdx
@@ -5,4 +5,4 @@
 GET https://api.data.gov.my/weather
 ```
 
-Our Weather API will be officially launching on **October 5, 2023**. Please stay tuned for updates!
+Our Weather API will be officially launched no later than Tuesday, **10th October 2023**. Please stay tuned for updates!
