--- a/apps/docs/pages/realtime-api/weather.ms.mdx
+++ b/apps/docs/pages/realtime-api/weather.ms.mdx
@@ -5,4 +5,4 @@
 GET https://api.data.gov.my/weather
 ```
 
-API Cuaca akan dilancarkan secara rasmi oleh pihak kami pada **Oktober 5,2023**. Nantikan kemaskini dari pihak kami tidak lama lagi!
+API Cuaca akan dilancarkan secara rasmi oleh pihak kami tidak lewat dari Selasa, **10 Oktober 2023**. Nantikan kemaskini dari pihak kami tidak lama lagi!
