docs: update changelog

--- a/apps/docs/pages/changelog.en.mdx
+++ b/apps/docs/pages/changelog.en.mdx
@@ -7,5 +7,14 @@
   - `/opendosm` for accessing OpenDOSM specific data catalogue.
   - `/flood-warning` for accessing realtime flood warning data.
 
+## 1.1.0 (2023-10-09)
+
+### Weather API Release
+
+- Launched [Weather API](realtime-api/weather) with data from [MET Malaysia](https://www.met.gov.my/) with the following endpoints:
+  - `/weather/forecast` for accessing 7 day general forecast data.
+  - `/weather/warning` for accessing realtime weather warning data.
+  - `/weather/warning/earthquake` for accessing earthquake warning data.
+
 [Unreleased]: #unreleased
 [1.1.0]: #1.1.0---2023-10-25
