--- a/apps/docs/pages/changelog.ms.mdx
+++ b/apps/docs/pages/changelog.ms.mdx
@@ -7,5 +7,14 @@
   - `/opendosm` untuk mengakses katalog data OpenDOSM.
   - `/flood-warning` untuk mengakses data amaran banjir secara waktu sebenar.
 
+## 1.1.0 (2023-10-09)
+
+### Pelancaran API Cuaca
+
+- Pelancaran [Cuaca API](ms/realtime-api/weather) dengan data dari [MET Malaysia](https://www.met.gov.my/) dengan 'endpoints' berikut:
+  - `/weather/forecast` untuk mengakses data ramalan umum 7 hari.
+  - `/weather/warning` untuk mengakses data masa nyata amaran cuaca.
+  - `/weather/warning/earthquake` untuk mengakses data amaran gempa bumi.
+
 [Unreleased]: #unreleased
 [1.1.0]: #1.1.0---2023-10-25
