docs: update "Recreation Centre" term

--- a/apps/docs/pages/realtime-api/weather.en.mdx
+++ b/apps/docs/pages/realtime-api/weather.en.mdx
@@ -72,7 +72,7 @@ The `location_id` is in "AA000" format, where the aphabetical prefix represents 
 There are five possible types of locations:
 
 - `St` for State
-- `Rc` for Recreation
+- `Rc` for Recreation Centre
 - `Ds` for District
 - `Tn` for Town
 - `Dv` for Division
@@ -81,18 +81,18 @@ To filter for forecast data for a specific location category, simply use the `co
 
 ### Understanding the Field Values
 
-| Key                  | Type    | Description                                                                                                                 | Example Value                                                                                                                                               |
-| -------------------- | ------- | --------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `location_id`        | string  | Unique identifier for the location. See [Filtering by location category](#filtering-by-location-category) for more details. | <ul> <li>`"St001"` (State)</li> <li>`"Rc001"` (Recreation)</li> <li>`"Ds001"` (District)</li> <li>`"Tn001"` (Town)</li> <li>`"Dv001"` (Division)</li> </ul> |
-| `location_name`      | string  | Name of the location.                                                                                                       | `"Langkawi"`                                                                                                                                                |
-| `date`               | date    | Date of the weather forecast.                                                                                               | `"1957-08-31"`                                                                                                                                              |
-| `morning_forecast`   | string  | Forecast for the morning period.                                                                                            | `"Hujan di satu dua tempat"`                                                                                                                                |
-| `afternoon_forecast` | string  | Forecast for the afternoon period.                                                                                          | `"Ribut petir di satu dua tempat"`                                                                                                                          |
-| `night_forecast`     | string  | Forecast for the night period.                                                                                              | `"Tiada hujan"`                                                                                                                                             |
-| `summary_forecast`   | string  | Summary of the day's forecast.                                                                                              | `"Ribut petir di satu dua tempat"`                                                                                                                          |
-| `summary_when`       | string  | Timing of the summarized forecast.                                                                                          | `"Petang"`                                                                                                                                                  |
-| `min_temp`           | integer | Minimum temperature for the day in Celsius.                                                                                 | `26`                                                                                                                                                        |
-| `max_temp`           | integer | Maximum temperature for the day in Celsius.                                                                                 | `32`                                                                                                                                                        |
+| Key                  | Type    | Description                                                                                                                 | Example Value                                                                                                                                                      |
+| -------------------- | ------- | --------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `location_id`        | string  | Unique identifier for the location. See [Filtering by location category](#filtering-by-location-category) for more details. | <ul> <li>`"St001"` (State)</li> <li>`"Rc001"` (Recreation Centre)</li> <li>`"Ds001"` (District)</li> <li>`"Tn001"` (Town)</li> <li>`"Dv001"` (Division)</li> </ul> |
+| `location_name`      | string  | Name of the location.                                                                                                       | `"Langkawi"`                                                                                                                                                       |
+| `date`               | date    | Date of the weather forecast.                                                                                               | `"1957-08-31"`                                                                                                                                                     |
+| `morning_forecast`   | string  | Forecast for the morning period.                                                                                            | `"Hujan di satu dua tempat"`                                                                                                                                       |
+| `afternoon_forecast` | string  | Forecast for the afternoon period.                                                                                          | `"Ribut petir di satu dua tempat"`                                                                                                                                 |
+| `night_forecast`     | string  | Forecast for the night period.                                                                                              | `"Tiada hujan"`                                                                                                                                                    |
+| `summary_forecast`   | string  | Summary of the day's forecast.                                                                                              | `"Ribut petir di satu dua tempat"`                                                                                                                                 |
+| `summary_when`       | string  | Timing of the summarized forecast.                                                                                          | `"Petang"`                                                                                                                                                         |
+| `min_temp`           | integer | Minimum temperature for the day in Celsius.                                                                                 | `26`                                                                                                                                                               |
+| `max_temp`           | integer | Maximum temperature for the day in Celsius.                                                                                 | `32`                                                                                                                                                               |
 
 #### Possible Values for `*_forecast` Fields
 
