update rate limit docs to include weather api

--- a/apps/docs/pages/rate-limit.en.mdx
+++ b/apps/docs/pages/rate-limit.en.mdx
@@ -11,7 +11,7 @@ The following table outlines the rate limits for different APIs:
 | Data Catalogue | 4 requests per minute     | 10 requests per minute |
 | OpenDOSM       | 4 requests per minute     | 10 requests per minute |
 | Flood Warning  | 4 requests per minute     | 10 requests per minute |
-| Weather        | TBD                       | TBD                    |
+| Weather        | 4 requests per minute     | 10 requests per minute |
 | GTFS Static    | TBD                       | TBD                    |
 | GTFS Realtime  | TBD                       | TBD                    |
 
