--- a/apps/docs/pages/rate-limit.ms.mdx
+++ b/apps/docs/pages/rate-limit.ms.mdx
@@ -11,7 +11,7 @@ Jadual berikut menghuraikan had kadar penggunaan untuk API yang disediakan:
 | Katalog Data  | 4 permintaan setiap minit | 10 permintaan setiap minit |
 | OpenDOSM      | 4 permintaan setiap minit | 10 permintaan setiap minit |
 | Amaran Banjir | 4 permintaan setiap minit | 10 permintaan setiap minit |
-| Cuaca         | TBD                       | TBD                        |
+| Cuaca         | 4 permintaan setiap minit | 10 permintaan setiap minit |
 | GTFS Statik   | TBD                       | TBD                        |
 | GTFS Realiti  | TBD                       | TBD                        |
 
