fix: update transport api launch dates

--- a/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
@@ -5,4 +5,5 @@
 GET https://api.data.gov.my/gtfs-realtime
 ```
 
-API Pengangkutan (GTFS Masa Nyata) akan dilancarkan secara rasmi oleh pihak kami pada **Oktober 25,2023**. Nantikan kemaskini dari pihak kami tidak lama lagi!
+API Pengangkutan (GTFS Masa Nyata) akan dilancarkan pada ~~Oktober 26,2023~~ November 7, 2023.
+Tarikh pelancaran telah dilewatkan akibat beberapa isu di peringkat operasi lapangan.
