--- a/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
@@ -5,4 +5,4 @@
 GET https://api.data.gov.my/gtfs-realtime
 ```
 
-Our Transport API (GTFS Realtime) will be officially launching on **October 26, 2023**. Please stay tuned for updates!
+Our Transport API (GTFS Realtime) will be officially launching on ~~October 26, 2023~~ November 7, 2023. The launch date was pushed back due to unforeseen challenges at ground level. Please stay tuned for updates!
