--- a/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
@@ -5,4 +5,5 @@
 GET https://api.data.gov.my/gtfs-static
 ```
 
-API Pengangkutan (GTFS) akan dilancarkan secara rasmi oleh pihak kami pada **Oktober 25,2023**. Nantikan kemaskini dari pihak kami tidak lama lagi!
+API Pengangkutan (GTFS) akan dilancarkan pada ~~Oktober 26,2023~~ November 7, 2023.
+Tarikh pelancaran telah dilewatkan akibat beberapa isu beberapa isu di peringkat operasi lapangan.
