fix broken report link in docs

--- a/apps/docs/pages/faq.en.mdx
+++ b/apps/docs/pages/faq.en.mdx
@@ -14,12 +14,11 @@ export function FAQBox({ title, children }) {
 ## General
 
 <FAQBox title="How can I notify the team of a bug on OpenAPI?">
-  To report a bug, please visit our GitHub repository and [open a new
-  issue](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Bug&labels=bugs).
+  To report a bug, [drop us an email](mailto:help.dtsa@mampu.gov.my?subject=Bug).
 </FAQBox>
 <FAQBox title="How can I suggest improvements for the site?">
-  For improvement suggestions, visit our GitHub repository and [open a new
-  issue](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Improvement&labels=improvement).
+  For improvement suggestions, [drop us an
+  email](mailto:help.dtsa@mampu.gov.my?subject=Improvement).
 </FAQBox>
 
 ## Data & Tech
