--- a/apps/docs/pages/faq.ms.mdx
+++ b/apps/docs/pages/faq.ms.mdx
@@ -5,14 +5,12 @@ import { FAQBox } from "./faq.en.mdx";
 ## Umum
 
 <FAQBox title="Bagaimanakah cara untuk melapori 'bug' di OpenAPI?">
-  Untuk melaporkan sebarang 'bug' yang ditemui, sila [buka isu
-  baharu](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Bug&labels=bugs) di
-  GitHub repositori kami.
+  Untuk melaporkan sebarang 'bug' yang ditemui, sila [hantarkan e-mel kepada
+  kami](mailto:help.dtsa@mampu.gov.my?subject=Bug).
 </FAQBox>
 <FAQBox title="Bagaimanakah cara untuk memberi cadangan penambahbaikan?">
-  Sama juga, sebarang cadangan penambahbaikan boleh dianjurkan di GitHub repositori kami dengan
-  [membuka isu
-  baharu](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=Improvement&labels=improvement).
+  Sama juga, sebarang cadangan penambahbaikan boleh dianjurkan dengan [menghantarkan e-mel kepada
+  kami](mailto:help.dtsa@mampu.gov.my?subject=Improvement).
 </FAQBox>
 
 ## Data & Teknologi
