--- a/apps/docs/pages/response-format.en.mdx
+++ b/apps/docs/pages/response-format.en.mdx
@@ -2,13 +2,13 @@
 
 After sending an API request, you will receive a response with the following codes and headers, which indicate the status of your request:
 
-| Code |      Status       | Description                                                                                                                                                                                      |
-| :--: | :---------------: | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 200  |        OK         | Successful Request.                                                                                                                                                                              |
-| 400  |    Bad Request    | Invalid request. Check error message for more information.                                                                                                                                       |
-| 404  |     Not Found     | The resource requested doesn’t exist.                                                                                                                                                            |
-| 429  | Too Many Requests | Your client is currently being rate limited. Request an API token at [Authentication](authentication) to increase usage limits.                                                                  |
-| 500  |   Server Error    | Something went wrong with OpenAPI! Please [leave a GitHub issue](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=500%20Internal%20Server%20Error) if you encounter this error. |
+| Code |      Status       | Description                                                                                                                          |
+| :--: | :---------------: | ------------------------------------------------------------------------------------------------------------------------------------ |
+| 200  |        OK         | Successful Request.                                                                                                                  |
+| 400  |    Bad Request    | Invalid request. Check error message for more information.                                                                           |
+| 404  |     Not Found     | The resource requested doesn’t exist.                                                                                                |
+| 429  | Too Many Requests | Your client is currently being rate limited. Request an API token at [Authentication](authentication) to increase usage limits.      |
+| 500  |   Server Error    | Something went wrong with OpenAPI! Please [drop us an email](mailto:help.dtsa@mampu.gov.my?subject=Bug) if you encounter this error. |
 
 ### Valid Response
 
