--- a/apps/docs/pages/response-format.ms.mdx
+++ b/apps/docs/pages/response-format.ms.mdx
@@ -2,13 +2,13 @@
 
 Selepas menghantar permintaan API, anda akan menerima respons dengan kod dan elemen-elemen berikut, yang menunjukkan status permintaan anda:
 
-| Kod |          Status           | Penerangan                                                                                                                                                                                                  |
-| :-: | :-----------------------: | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 200 |            OK             | Permintaan Berjaya.                                                                                                                                                                                         |
-| 400 |     Permintaan Buruk      | Permintaan tidak sah. Semak mesej ralat untuk maklumat lanjut.                                                                                                                                              |
-| 404 |       Tidak Ditemui       | Sumber yang diminta tidak wujud.                                                                                                                                                                            |
-| 429 | Terlalu Banyak Permintaan | Kadar penggunaan anda telah dihadkan. Mohon token API di [Pengesahan](authentication) untuk meningkatkan had penggunaan.                                                                                    |
-| 500 |       Ralat Pelayan       | Ada sesuatu yang tidak kena dengan OpenAPI! Sila [tinggalkan isu GitHub](https://github.com/data-gov-my/datagovmy-openapi/issues/new?title=500%20Internal%20Server%20Error) jika anda menghadapi ralat ini. |
+| Kod |          Status           | Penerangan                                                                                                                                                |
+| :-: | :-----------------------: | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 200 |            OK             | Permintaan Berjaya.                                                                                                                                       |
+| 400 |     Permintaan Buruk      | Permintaan tidak sah. Semak mesej ralat untuk maklumat lanjut.                                                                                            |
+| 404 |       Tidak Ditemui       | Sumber yang diminta tidak wujud.                                                                                                                          |
+| 429 | Terlalu Banyak Permintaan | Kadar penggunaan anda telah dihadkan. Mohon token API di [Pengesahan](authentication) untuk meningkatkan had penggunaan.                                  |
+| 500 |       Ralat Pelayan       | Ada sesuatu yang tidak kena dengan OpenAPI! Sila [hantarkan e-mel kepada kami](mailto:help.dtsa@mampu.gov.my?subject=Bug) jika anda menghadapi ralat ini. |
 
 ### Respons Sah
 
