feat: update rate limit for gtfs-static

--- a/apps/docs/pages/rate-limit.en.mdx
+++ b/apps/docs/pages/rate-limit.en.mdx
@@ -12,7 +12,7 @@ The following table outlines the rate limits for different APIs:
 | OpenDOSM       | 4 requests per minute     | 10 requests per minute |
 | Flood Warning  | 4 requests per minute     | 10 requests per minute |
 | Weather        | 4 requests per minute     | 10 requests per minute |
-| GTFS Static    | TBD                       | TBD                    |
+| GTFS Static    | 4 requests per minute     | 10 requests per minute |
 | GTFS Realtime  | TBD                       | TBD                    |
 
 <span className="text-sm italic">* APIs that are unreleased yet are marked with TBD.</span>
