--- a/apps/docs/pages/rate-limit.ms.mdx
+++ b/apps/docs/pages/rate-limit.ms.mdx
@@ -12,7 +12,7 @@ Jadual berikut menghuraikan had kadar penggunaan untuk API yang disediakan:
 | OpenDOSM      | 4 permintaan setiap minit | 10 permintaan setiap minit |
 | Amaran Banjir | 4 permintaan setiap minit | 10 permintaan setiap minit |
 | Cuaca         | 4 permintaan setiap minit | 10 permintaan setiap minit |
-| GTFS Statik   | TBD                       | TBD                        |
+| GTFS Statik   | 4 permintaan setiap minit | 10 permintaan setiap minit |
 | GTFS Realiti  | TBD                       | TBD                        |
 
 <span className="text-sm italic">* API yang belum dikeluarkan lagi ditandai dengan TBD.</span>
