--- a/apps/docs/pages/changelog.ms.mdx
+++ b/apps/docs/pages/changelog.ms.mdx
@@ -16,5 +16,14 @@
   - `/weather/warning` untuk mengakses data masa nyata amaran cuaca.
   - `/weather/warning/earthquake` untuk mengakses data amaran gempa bumi.
 
-[Unreleased]: #unreleased
-[1.1.0]: #1.1.0---2023-10-25
+## 1.2.0 (2023-11-06)
+
+### Pelancaran API GTFS Statik
+
+- Pelancaran [API GTFS Statil](ms/realtime-api/gtfs-static) dengan data dari myBAS Johor Bahru, KTMB, dan Prasarana dengan 'endpoints' berikut:
+  - `gtfs-static/mybas-johor` untuk muat turun fail ZIP GTFS myBAS.
+  - `gtfs-static/ktmb` untuk muat turun fail ZIP GTFS KTMB.
+  - `gtfs-static/prasarana?category=<kategori>` untuk muat turun fail ZIP GTFS Prasarana.
+
+[Belum Dikeluarkan]: #belum-dikeluarkan
+[1.2.1]: #1.2.1---2023-11-13
