--- a/apps/docs/pages/realtime-api/gtfs-static.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.en.mdx
@@ -6,21 +6,28 @@ GET https://api.data.gov.my/gtfs-static/<agency>
 
 ### What does GTFS Static do?
 
-GTFS Static API provides access to standardized public transportation schedules and geographic information, following the General Transit Feed Specification (GTFS).
+The GTFS Static API provides access to standardized public transportation schedules and geographic information, following the General Transit Feed Specification (GTFS).
 To learn more about GTFS and its specifications, you can visit the [GTFS documentation](https://developers.google.com/transit/gtfs) provided by Google.
+
+### Important note: We are building iteratively
+
+This is the first time that Malaysia has had an official and freely-usable GTFS API. It is the result of months of hard work and collaboration between the data.gov.my developer team and various public transport operators. It is by no means complete; there are plenty of services that will only be integrated over the coming months and years. However, with several primary services already included, we felt that it was time to push it live - so that the private sector and public transport community could begin building from it, and most crucially, giving us feedback on how to improve it.
+
+If you have any feedback on the GTFS API, please write to us at data.dtsa@mampu.gov.my - we welcome any and all constructive feedback!
 
 ### Source of GTFS Static Data
 
 The GTFS Static API incorporates data from various transport agencies in Malaysia. Currently, the following agencies contribute their transit data:
 
 - [**myBAS Johor Bahru**](https://www.causewaylink.com.my/mybas/en/): A bus service operator in Johor Bahru, Malaysia, providing bus transportation on 19 routes across 5 corridors, including Kota Tinggi, Masai, Kulai, Gelang Patah, and Pontian.
-- [**KTMB (Keretapi Tanah Melayu Berhad)**](https://www.ktmb.com.my/): The main railway operator in Malaysia, providing train services across the country.
+- [**KTMB (Keretapi Tanah Melayu Berhad)**](https://www.ktmb.com.my/): A railway operator providing train services across the country.
 - [**Prasarana**](https://myrapid.com.my/): A public transport operator responsible for managing various modes of transportation, including LRT (Light Rail Transit), MRT (Mass Rapid Transit), monorail, and bus services.
 
 ### Frequency of Data Update
 
-- myBAS Johor Bahru and Prasarana GTFS datasets are updated **when required**.
-- KTMB GTFS dataset is updated **daily**.
+- GTFS for myBAS Johor Bahru: **As required**.
+- GTFS for Prasarana: **As required**.
+- GTFS for KTMB: **Daily at 00:01:00**.
 
 ## Request Query & Response Format
 
@@ -66,4 +73,4 @@ Here are the essential text files provided by all agencies:
 | `calendar.txt`   | Service availability for specific dates          |
 
 Other optional files, such as `frequencies.txt` and `shapes.txt`, are provided if available.
-For more details, refer to the [Static Transit Reference](https://developers.google.com/transit/gtfs/reference) provided by Google.
+For more details, refer to the [GTFS Schedule Reference](https://gtfs.org/schedule/reference/).
