docs: gtfs-r content

--- a/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
@@ -1,9 +1,11 @@
-## Endpoint API GTFS Masa Nyata
+## Endpoint API GTFS Masa Sebenar _(Realtime)_
 
 ```http
 # AKAN DATANG
 GET https://api.data.gov.my/gtfs-realtime
 ```
 
-API Pengangkutan (GTFS Masa Nyata) akan dilancarkan pada ~~Oktober 26,2023~~ November 7, 2023.
-Tarikh pelancaran telah dilewatkan akibat beberapa isu di peringkat operasi lapangan.
+API [GTFS Statik](/ms/realtime-api/gtfs-static) sudahpun dilancarkan,
+dan kami kini dalam process mendapatkan maklumbalas daripada komuniti data terbuka.
+API GTFS Masa Sebenar juga telah dilancarkan tetapi hanya dibekalkan kepada pihak tertentu bagi tujuan pengujian awal (_beta testing_);
+kami sasarkan untuk melancarkannya bagi tujuan penggunaan secara terbuka pada 14 November 2023.
