--- a/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
@@ -5,4 +5,6 @@
 GET https://api.data.gov.my/gtfs-realtime
 ```
 
-Our Transport API (GTFS Realtime) will be officially launching on ~~October 26, 2023~~ November 7, 2023. The launch date was pushed back due to unforeseen challenges at ground level. Please stay tuned for updates!
+We have launched [GTFS Static](gtfs-static), and are currently in the process of gathering community feedback.
+Our GTFS Realtime API has also been made live, but only to selected parties for a week of beta testing;
+we target to release it to the public on November 14, 2023. Please stay tuned for updates!
