docs: update typo

--- a/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
@@ -67,4 +67,5 @@ Setelah mengekstrak fail ZIP yang diperoleh dari API, anda akan mendapat beberap
 | `stop_times.txt` | Jadual dan butiran hentian bagi perjalanan         |
 | `calendar.txt`   | Status perkhidmatan untuk tarikh tertentu          |
 
-Fail lain seperti `frequencies.txt` dan `shapes.txt` dibekalkan sekiranya tersedia oleh agensi. Untuk butiran lanjut, anda boleh merujuk rujuk [Rujukan Transit Statik](https://gtfs.org/schedule/reference/).
+Fail lain seperti `frequencies.txt` dan `shapes.txt` dibekalkan sekiranya tersedia oleh agensi.
+Untuk butiran lanjut, anda boleh merujuk [Rujukan Transit Statik](https://gtfs.org/schedule/reference/).
