docs: update typo

--- a/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
@@ -6,7 +6,7 @@ GET https://api.data.gov.my/gtfs-static/<agency>
 
 ### Apakah fungsi API GTFS Statik?
 
-API GTFS Static menyediakan akses kepada jadual pengangkutan awam serta maklumat geospatial yang telah dipiawaikan mengikuti General Transit Feed Specification (GTFS). Untuk mendapat maklum lanjut mengenai GTFS, anda boleh merujuk [dokumentasi GTFS](https://developers.google.com/transit/gtfs) yang disediakan oleh Google.
+API GTFS Static menyediakan akses kepada jadual pengangkutan awam serta maklumat geospatial yang telah dipiawaikan mengikuti General Transit Feed Specification (GTFS). Untuk mendapat maklumat lanjut mengenai GTFS, anda boleh merujuk [dokumentasi GTFS](https://developers.google.com/transit/gtfs) yang disediakan oleh Google.
 
 ### Nota penting: API ini dibangunkan secara _iterative_
 
