fix: change GTFS meta title tag to capital letter

--- a/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
@@ -1,4 +1,10 @@
+import Head from "next/head";
+
 ## GTFS Realtime API Endpoint
+
+<Head>
+  <title>GTFS Realtime - Open API Docs</title>
+</Head>
 
 ```http
 # COMING SOON
