--- a/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
@@ -1,4 +1,10 @@
+import Head from "next/head";
+
 ## Endpoint API GTFS Masa Sebenar _(Realtime)_
+
+<Head>
+  <title>GTFS Realtime - Open API Docs</title>
+</Head>
 
 ```http
 # AKAN DATANG
