--- a/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
@@ -1,4 +1,10 @@
+import Head from "next/head";
+
 ## Endpoint API GTFS Statik
+
+<Head>
+  <title>GTFS Static - Open API Docs</title>
+</Head>
 
 ```http
 GET https://api.data.gov.my/gtfs-static/<agency>
