--- a/apps/docs/pages/realtime-api/gtfs-static.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.en.mdx
@@ -61,8 +61,10 @@ GET https://api.data.gov.my/gtfs-static/prasarana?category=<category>
 # ZIP file is returned
 ```
 
-- The possible `<category>` values are `rapid-bus-penang`, `rapid-bus-kuantan`, `rapid-bus-mrtfeeder` & `rapid-rail-kl`.
-- _Note: `rapid-bus-kl` is currently unavailable and will be updated in the future._
+- The possible `<category>` values are `rapid-bus-penang`, `rapid-bus-kuantan`, `rapid-bus-mrtfeeder`, `rapid-rail-kl` and `rapid-bus-kl`.
+- Note: Some trips (fully specified in [this CSV](https://openapi-malaysia-transport.s3.ap-southeast-1.amazonaws.com/prasarana/problematic_trips.csv))
+  for the `rapid-bus-kl` endpoint have been removed from the `stop_times.txt` file due to operational issues which affect data accuracy.
+  We are actively working to resolve and restore them to our GTFS feed.
 
 ### Understanding the data
 
